lower half of employer receipt stays on top of others receipts when extended; fixed issues with page going behind navbar on narrow screens

--- a/app/assets/stylesheets/components/_side-bar.scss
+++ b/app/assets/stylesheets/components/_side-bar.scss
@@ -145,4 +145,5 @@ body{
 
 .width-200 {
   min-width: 200px;
+  height: 100vh;
 }
